--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "browser-image-compression": "^2.0.0",
+    "crypto-js": "^4.1.1",
+    "long-press-event": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-file-picker": "^0.0.6",
+    "react-sage": "^0.3.16",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
